--- a/Module_H_Ordinary_Differential_Equations.ipynb
+++ b/Module_H_Ordinary_Differential_Equations.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMq0RZb4LqFnvTCt2p9IK7G",
+      "authorship_tag": "ABX9TyPezx+rRPZ0w2ULXU/NopBr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
         "\n",
         "### Introduction\n",
         "\n",
-        "Most numerical methods for solving differential equations are designed for first-order ODEs. To apply these methods to higher-order equations, we must first reduce them to an equivalent system of first-order ODEs. This is done by defining a state vector $S(t)$, which contains the original function and its derivatives up to order $n−1$. The derivative of this state vector $\\frac{dS}{dt}$​ can then be expressed in terms of the state itself, forming a system of first-order equations. This transformation preserves the problem's structure while making it compatible with standard numerical solvers. For example, the second-order pendulum equation can be rewritten as a system of two first-order equations by introducing $Θ(t)$ and $Θ^{̇}(t)$ as state variables. This method is essential for implementing numerical solvers on higher-order systems.\n",
+        "Most numerical methods for solving differential equations are designed for first-order ODEs. To apply these methods to higher-order equations, we must first reduce them to an equivalent system of first-order ODEs. This is done by defining a state vector $S(t)$, which contains the original function and its derivatives up to order $n−1$. The derivative of this state vector $\\frac{dS}{dt}$​ can then be expressed in terms of the state itself, forming a system of first-order equations. This transformation preserves the problem's structure while making it compatible with standard numerical solvers. For example, the second-order pendulum equation can be rewritten as a system of two first-order equations by introducing $Θ(t)$ and $\\dot{\\Theta}(t)$ as state variables. This method is essential for implementing numerical solvers on higher-order systems.\n",
         "\n",
         "### Reduction of Order: Example with Pendulum\n",
         "\n",
